2001-10-03  jacob berkman  <jacob@ximian.com>

	* gtk/gtkwidget.c (gtk_widget_style_get_property): 
	* gtk/gtkstyle.c (_gtk_style_peek_property_value): 
	* gtk/gtksettings.c (apply_queued_setting): 
	* gtk/gtkmain.c (gtk_init_check): 
	* gtk/gtkcontainer.c (gtk_container_child_get_property):
	s/retrive/retrieve/

Wed Oct  3 20:29:29 2001  Kristian Rietveld  <kristian@planet.nl>

	* gtk/gtktreemodelsort.[ch]: preparation for surgery
	* tests/testtreesort.c: ditto

2001-10-02  Havoc Pennington  <hp@redhat.com>

        Throughout: assorted docs
	
	* gdk/gdkwindow.h: deprecate gdk_window_set_hints(), it's broken,
	gdk_window_set_geometry_hints() should be used instead.

	* gdk/gdkimage.h: deprecate gdk_image_ref, gdk_image_unref, and
	document them

	* gdk/x11/gdkx.h: remove gdk_get_client_window() since it doesn't
	seem to exist in any .c files

	* gdk/x11/gdkcolor-x11.c (gdk_colormap_query_color): docs, 
	g_return_if_fail (pixel < colormap->size).

Wed Oct  3 10:42:54 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkdnd.c (gtk_drag_dest_find_target): Allow
	NULL for @target_list to mean, use
	gtk_drag_dest_get_target_list (widget).

	* gtk/gtkdnd.c (gtk_drag_finish): Fix problem where
	drop could hang when calling gtk_drag_finish with 
	success == FALSE and del == TRUE.

	* gtk/gtkdnd.c (gtk_drag_dest_drop): Fix problem where
	drops without a matching target found would propagate
	to the parent widget rather than being rejected.

	* gtk/gtktextview.c (gtk_text_view_drag_data_received): 
	Use text_view->dnd_mark instead of mark name to be
	consistent with the rest of the code.

	* gtk/gtktextview.c (gtk_text_view_drag_motion): Make
	pendantically correct for a drop-only-in-some-places
	widget. (Check whether you can insert in drag_drop,
	not just in drag_motion ... matters in theory, and
	for Motif drag and drop in practice.)

	* gtk/gtkentry.c (gtk_entry_drag_drop): Patch from 
	Damian Ivereigh to not allow drops on non-editable
	entries. (#61124)
